--- a/public/index-1.css
+++ b/public/index-1.css
@@ -42,16 +42,19 @@ a {
 	transition: 1s;
 }
 .join-container .join-header{
-	background-color: rgb(7, 9, 3);
+	background-color: rgb(34, 45, 15);
 }
 .join-main label{
-	color:rgb(15, 3, 26);
+	color: black;
 	font-weight: 1000;
 	font-size: 25px;
 }
-
+.join-main label .U{
+	font-size: 40px;
+	color: rgb(11, 12, 13);
+}
 .join-main #username{
-	border-radius: 5px;
+	border-radius: 15px;
 }
 
 /* Chat Page */
@@ -88,7 +91,7 @@ a {
 }
 
 .chat-sidebar h2 {
-	font-size: 15px;
+	font-size: 40px;
 	background: rgba(0, 0, 0, 0.1);
 	padding: 10px;
 	margin-bottom: 20px;
@@ -103,13 +106,14 @@ a {
 }
 
 .chat-messages {
-	padding: 50px;
-	max-height: 500px;
+	padding: 100px;
+	/* max-height: 1000px; */
+	height: 100%;
 	overflow-y: scroll;
 }
 
 .chat-messages .message {
-	padding: 15px;
+	padding: 10px;
 	margin-bottom: 15px;
 	/* background-color: var(--light-color); */
 	border-radius: 5px;
@@ -119,8 +123,7 @@ a {
 .chat-messages .message .meta {
 	font-size: 15px;
 	font-weight: bold;
-	color: #7386ff;
-	/* color: azure; */
+	color: var(--dark-color-b);
 	opacity: 0.7;
 	margin-bottom: 7px;
 }
