--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+/* custom scrollbar */
+::-webkit-scrollbar{
+	width: 12px;
+	/* display: none; */
+	/* background-color: rgb(19, 180, 143); */
+	background-image: linear-gradient(to right, #232526,#414345);
+}
+::-webkit-scrollbar-thumb{
+	background-color: rgb(82, 82, 91);
+	z-index: 9;
+	border-radius:10px;
 
+}
 :root {
 	--dark-color-a: #667aff;
 	--dark-color-b: #7386ff;
@@ -12,12 +24,14 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	/* overflow: hidden; */
+	transition: 0.5s;
 }
-
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	/* background-image: linear-gradient(to right, #CE9FFC, #7367F0); */
+	/* background-color: red; */
+	background-image: linear-gradient(to right, #232526,#414345);
 	margin: 20px;
 }
 
@@ -38,12 +52,19 @@ a {
 	font-size: 17px;
 }
 .btn:hover{
-	background:  #a56edb;
-	transition: 1s;
+	background:  rgb(19, 180, 143);
+	transition: .5s ease-out;
+	font-size: 20px;
+}
+.join-container{
+	box-shadow: 10px 10px 5px rgba(56, 197, 219, 0.3);
+	width: 60vw;
+	
 }
 .join-container .join-header{
 	background-color: rgb(7, 9, 3);
 }
+
 .join-main label{
 	color:rgb(15, 3, 26);
 	font-weight: 1000;
@@ -55,9 +76,13 @@ a {
 }
 
 /* Chat Page */
+.join-main{
+	border-radius: 10px;
+	margin-top: -100px;
+	display: grid;
+	place-items: center;
+}
 .chat-container {
-	/* max-width: 1100px; */
-	width: 90vw;
 	background: #fff;
 	margin: 30px auto;
 	overflow: hidden;
@@ -147,7 +172,7 @@ a {
 
 /* Join Page */
 .join-container {
-	max-width: 500px;
+	/* max-width: 500px; */
 	margin: 80px auto;
 	color: #fff;
 }
@@ -162,6 +187,8 @@ a {
 
 .join-main {
 	padding: 30px 40px;
+	/* max-height: 100vh; */
+	height: 60vh;
 	background: var(--dark-color-b);
 }
 
@@ -196,13 +223,142 @@ a {
 	margin-top: 20px;
 	width: 100%;
 }
+/* my details */
+#content-container{
+	margin-top: 5vh;
+	transition: .5s;
+	display: flex;
+	justify-content: space-evenly;
+}
+.my-details{
+	border-radius: 10px;
+	box-shadow: 10px 5px 5px rgba(56, 197, 219, 0.3);
+	padding: 20px;
+	display: grid;
+	place-items: center;
+	min-height: 20vh;
+	width: 20vw;
+	background: var(--dark-color-b);
+	text-align: center;
+	font-size: 15px;
+}
+/* #about-site-divs{
+
+} */
+.about-site{
+	background-color: var(--dark-color-a);
+	display: grid;
+	place-items: center;
+	text-align: center;
+	height: 25vh;
+	box-shadow: 10px 5px 5px rgba(56, 197, 219, 0.3);
+	font-size: 20px;
+	border-radius: 10px;
+}
+
 
 @media (max-width: 700px) {
+	.join-main{
+		width: 100%;
+	}
+	.join-header h1{
+		color: rgb(0, 0, 0);
+		text-align: center;
+		font-size: 20px;
+	}
 	.chat-main {
 		display: block;
 	}
 
 	.chat-sidebar {
 		display: none;
+	}
+}
+
+@media (max-width: 430px) {
+	#content-container{
+		display: grid;
+		grid-template-columns: 1fr;
+		place-items: center;
+	}
+	.my-details{
+		border: 1px solid black;
+		margin-top: 10vh;
+		width: 50vw;
+	}
+}
+@media (max-width: 376px) {
+	.join-header h1{
+		color: rgb(0, 0, 0);
+		text-align: center;
+		font-size: .8em;
+		margin-bottom: 10vw;
+	}
+}
+@media (max-width: 340px) {
+	.join-header h1{
+		color: rgb(0, 0, 0);
+		text-align: center;
+		font-size: .8em;
+		margin-bottom: 10vw;
+	}
+	.form-control label{
+		color:  rgb(0,0,0);
+		text-align: center;
+		font-size: 10px;
+	}
+	.form-control #username{
+		color:  rgb(0,0,0);
+		text-align: center;
+		font-size: 10px;
+		width: 100px;
+	}
+	.form-control #room{
+		color:  rgb(0,0,0);
+		text-align: center;
+		font-size: 10px;
+		width: 100px;
+	}
+	.form-control .btn{
+		color:  red;
+		text-align: center;
+		font-size: 10px;
+		width: 100px;
+	}
+}
+/* height */
+@media (max-height: 600px) {
+	.join-header h1{
+		color: rgb(255, 255, 255);
+		text-align: center;
+		font-size: .8em;
+		margin-bottom: 10vw;
+	}
+	.form-control label{
+		color:  rgb(0,0,0);
+		text-align: center;
+		font-size: 10px;
+	}
+	.form-control #username{
+		color: red;
+		text-align: center;
+		font-size: 10px;
+		width: 40vw;
+	}
+	.form-control .select-div {
+		display: grid;
+		place-items: center;
+	}
+	.form-control #room{
+		color:  rgb(0,0,0);
+		text-align: center;
+		font-size: 10px;
+		width: 100px;
+	}
+	.form-control .btn{
+		color:  red;
+		text-align: center;
+		font-size: 10px;
+		width: 100px;
 	}
 }
